2012-03-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m: Remove all the extra reference handling code
	and the special retain and release methods.
	* Tests/base/NSXMLNode/basic.m,
	* Tests/base/NSXMLNode/children.m: A few more test
	cases. Validated on MacOSX 10.6.

2012-03-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/base/NSString/locale.m: Add a simple test for locale sensitive
	compare: and rangeOfString: methods.

2012-03-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSString.m: Fix for ICU anchored backwards search

2012-03-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLocale.m (GSDefaultLanguageLocale): Add missing check
	for LC_MESSAGES definition.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: fix for bug #35692

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Compatribility fix ... copy strings implicitly
	when taking a substring of a string whose buffer is not owned.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLConnection.m: Compatibility fix for bug #35686
	In this case Cocoa breaks its own convention about delegates
	not being retained, so we need to do the same.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/config.h.in: add missing ICU headers
	* Source/NSString.m: fix minor coding standard violations.

2012-03-01  Jens Alfke <jens@mooseyard.com>

	* Source/NSString.m:
	* Source/NSURL.m:
	Fix decoding of percent escapes with uppercase hex values
	(bug #35685)

2012-03-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSString.m: Implement a codepath using ICU for
	-compare:options:range:locale: and
	-rangeOfString:options:range:locale: when a non-nil locale
	is provided.
	* Headers/Foundation/NSString.h (-compare:options:range:locale:):
	Change type of locale parameter to id; it can be NSDictionary or
	NSLocale.
	* configure.ac: add some ICU headers used in NSString change
	* configure: regenerate
